--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 
 <body class="open-sans-normal">
-    <header class="header secondary-bg">
+    <header class="header secondary-bg hide">
         <nav>
             <h3 class="nav-title">Ma<span class="text-primary">r</span>y</h3>
             <ul>
@@ -67,7 +67,7 @@
             </div>
         </section>
         <!-- what is do section start -->
-        <section class="skills">
+        <section class="skills ">
             <h3 class="section-title text-center">What I do</h3>
             <p class="section-description text-center">I have more than 10 years experience building software for clients all over
                 the world. Below is a quick overview of my main technical skill sets and technologies i use. Want to
@@ -97,7 +97,7 @@
                 </div>
             </div>
         </section>
-        <section class="resume">
+        <section class="resume ">
             <h3 class="section-title text-center">A summary of My Resume</h3>
             <div class="resume-container">
                 <!-- .resume-column*2>h3.resume-column-title+.experience*3>h4.experience-title+h5.experience-sub-title+.experience-description -->
@@ -154,7 +154,7 @@
             </div>
         </section>
     </main>
-    <footer class="secondary-bg">
+    <footer class="secondary-bg ">
         <div class="footer-column">
             <h3 class="section-title">Lets Connect</h3>
             <p>Please fill out the form on this section to contact with me or call between 9:00 A.M and 8.00 P.M ET, Sunday through Thursday.</p>
